Adding Mali Workaround Patch for latest GPU

Adding Mali Workaround patch for the latest Mali-G71
https://www.arm.com/products/graphics-and-multimedia/mali-gpu

BUG=678508

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2611933002
Cr-Commit-Position: refs/heads/master@{#442061}

Former-commit-id: 2e52433cf945c3c78c998416eddeda91b2514775